[notebooks](chore) Adjust import structure to python3.12 and new pydentification

--- a/notebooks/datasets.ipynb
+++ b/notebooks/datasets.ipynb
@@ -31,18 +31,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from itertools import islice\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import torch\n",
     "from matplotlib import pyplot as plt\n",
     "from numpy.typing import NDArray\n",
-    "from scipy import integrate, special, stats\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "from pydentification.metrics import regression_report"
+    "from scipy import integrate, special, stats"
    ]
   },
   {
@@ -149,8 +143,8 @@
    "source": [
     "# Sum of Gaussians\n",
     "\n",
-    "This dataset represents high dimensional static system, R^8 to R^1. The function is defined as sum of 8 Gaussian density\r\n",
-    "functions (not distribution, but explicit PDF) with different C (given in table below). The inputs are samples uniformly\r\n",
+    "This dataset represents high dimensional static system, R^8 to R^1. The function is defined as sum of 8 Gaussian density\n",
+    "functions (not distribution, but explicit PDF) with different C (given in table below). The inputs are samples uniformly\n",
     "on range [-1, 1]. L is 1/4 for all Gaussian functions, so for its sum as well. Noise was added with sigma = 0.1."
    ]
   },
