--- a/notebooks/sum-of-gaussians.ipynb
+++ b/notebooks/sum-of-gaussians.ipynb
@@ -32,17 +32,15 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import torch\n",
     "import seaborn as sns\n",
-    "from sklearn import metrics\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
+    "import torch\n",
     "from pydentification.data.datamodules.simulation import SimulationDataModule\n",
     "from pydentification.data.process import unbatch\n",
-    "from pydentification.models.nonparametric import kernels\n",
-    "from pydentification.models.nonparametric.memory import ExactMemoryManager\n",
-    "from pydentification.training.bounded.module import BoundedSimulationTrainingModule"
+    "from sklearn import metrics\n",
+    "\n",
+    "from src.nonparametric import kernels\n",
+    "from src.nonparametric.memory import ExactMemoryManager\n",
+    "from src.training.module import BoundedSimulationTrainingModule"
    ]
   },
   {
