--- a/notebooks/wiener-hammerstein.ipynb
+++ b/notebooks/wiener-hammerstein.ipynb
@@ -32,19 +32,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import torch\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from sklearn import metrics\n",
+    "import torch\n",
     "from matplotlib import pyplot as plt\n",
-    "\n",
     "from pydentification.data.datamodules.simulation import SimulationDataModule\n",
     "from pydentification.data.process import unbatch\n",
     "from pydentification.models.nonparametric import kernels\n",
-    "from pydentification.models.nonparametric.memory import ExactMemoryManager, NNDescentMemoryManager\n",
-    "from pydentification.models.nonparametric.memory.transformations import TruncateDelayLine\n",
-    "from pydentification.training.bounded.module import BoundedSimulationTrainingModule"
+    "from sklearn import metrics\n",
+    "\n",
+    "from src.nonparametric.memory import NNDescentMemoryManager\n",
+    "from src.nonparametric.memory.transformations import TruncateDelayLine\n",
+    "from src.training.module import BoundedSimulationTrainingModule"
    ]
   },
   {
