--- a/notebooks/nonlinear-dynamics.ipynb
+++ b/notebooks/nonlinear-dynamics.ipynb
@@ -32,18 +32,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import torch\n",
+    "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from sklearn import metrics\n",
+    "import torch\n",
     "from matplotlib import pyplot as plt\n",
-    "\n",
     "from pydentification.data.datamodules.simulation import SimulationDataModule\n",
     "from pydentification.data.process import unbatch\n",
-    "from pydentification.models.nonparametric import kernels\n",
-    "from pydentification.models.nonparametric.memory import ExactMemoryManager\n",
-    "from pydentification.training.bounded.module import BoundedSimulationTrainingModule"
+    "from sklearn import metrics\n",
+    "\n",
+    "from src.nonparametric import kernels\n",
+    "from src.nonparametric.memory import ExactMemoryManager\n",
+    "from src.training.module import BoundedSimulationTrainingModule"
    ]
   },
   {
